project/stage/semantic_tests/reject/return_arr.ul
void main() {

}

int [1] foo() {
    int [2] arr;
    return arr;
}
